Prevent create ScrollbarAnimationController for Mac Overlay Scrollbar

crbug.com/724507 is caused by my patch
(crrev.com/a825096f62e4f79732f26015909fd5ebcdd87b3c [formerly b50f6446eb79c4aaaac0a5eefdf90d2b4a99ce54]). I assigned
`settings.scrollbar_animator = cc::LayerTreeSettings::ANDROID_OVERLAY`
for default which we assigned `LayerTreeSettings::NO_ANIMATOR` before.
Which can give mobile emulator correct settings but in
LayerTreeImpl::RegisterScrollbar -
LayerTreeHostImpl::RegisterScrollbarAnimationController we create
ScrollbarAnimationController to handle scrollbar's opacity.

In this patch, we add GetScrollbarAnimator to ScrollbarLayerImplBase
and its subclasses. PaintedScrollbarLayerImpl::GetScrollbarAnimator can
always returns NO_ANIMATOR because AuraOverlayScrollbar is using
PaintedOverlayScrollbarLayerImpl, others can return based on
LayerTreeSettings. Then we can prevent create
ScrollbarAnimationController for Mac Overlay Scrollbar by checking
scrollbar's animator.

BUG=724507
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2918753002
Cr-Commit-Position: refs/heads/master@{#477287}

Former-commit-id: 4795906652460b283e526e6745057d77f0133980