cc/layers/painted_scrollbar_layer_impl.cc
@@ -210,4 +210,9 @@ const char* PaintedScrollbarLayerImpl::LayerTypeAsString() const {
   return "cc::PaintedScrollbarLayerImpl";
 }
 
+LayerTreeSettings::ScrollbarAnimator
+PaintedScrollbarLayerImpl::GetScrollbarAnimator() const {
+  return LayerTreeSettings::NO_ANIMATOR;
+}
+
 }  // namespace cc
