cc/layers/painted_scrollbar_layer_impl.h
@@ -57,6 +57,8 @@ class CC_EXPORT PaintedScrollbarLayerImpl : public ScrollbarLayerImplBase {
 
   int ThumbThickness() const override;
 
+  LayerTreeSettings::ScrollbarAnimator GetScrollbarAnimator() const override;
+
  protected:
   PaintedScrollbarLayerImpl(LayerTreeImpl* tree_impl,
                             int id,
