cc/layers/scrollbar_layer_impl_base.h
@@ -12,6 +12,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "cc/input/scrollbar.h"
 #include "cc/layers/layer.h"
 #include "cc/layers/layer_impl.h"
+#include "cc/trees/layer_tree_settings.h"
 
 namespace cc {
 
@@ -63,6 +64,8 @@ class CC_EXPORT ScrollbarLayerImplBase : public LayerImpl {
   // TODO(crbug.com/702832): No need for this function once there is element id
   // on overlay scrollbar layers.
   void SetOverlayScrollbarLayerOpacityAnimated(float opacity);
+
+  virtual LayerTreeSettings::ScrollbarAnimator GetScrollbarAnimator() const;
 
  protected:
   ScrollbarLayerImplBase(LayerTreeImpl* tree_impl,
